contrib/tree-sitter-parsley/grammar.js
    source_file: ($) => repeat($._statement),

    // ================================================================
    // Statements — parser.go L292-370 (parseStatement)
    // ================================================================

    _statement: ($) =>
      choice(
        $.let_statement,
        $.assignment_statement,
        $.dict_destructuring_assignment,
        $.export_statement,
        $.return_statement,
        $.check_statement,
        $.expression_statement,
      ),

    // parser.go L499-669 (parseLetStatement)
    // Forms: let x = expr, let {a,b} = expr, let [a,b] = expr
    // Also: let x <== expr, let x <=/= expr
    let_statement: ($) =>
      seq(
        choice("let", "var"),
        field("pattern", $._pattern),
        field("operator", choice("=", "<==", "<=/=")),
        field("value", $._expression),
      ),

    // parser.go L673-730 (parseAssignmentStatement)
    // Forms: x = expr, obj.name = expr, arr[0] = expr
    // Also: x <== expr, x <=/= expr
    return_statement: ($) =>
      prec.right(seq("return", optional(field("value", $._expression)))),

    // parser.go L808-828 (parseCheckStatement)
    // check CONDITION else VALUE — else is REQUIRED
    check_statement: ($) =>
      seq(
        "check",
        field("condition", $._expression),
        "else",
        field("fallback", $._expression),
      ),

    // parser.go L863-945 (parseExpressionStatement)
    expression_statement: ($) => $._expression,

    // ================================================================
    // Expressions — parser.go L957-1012 (parseExpression)
    // ================================================================

    _expression: ($) =>
      choice(
        $._primary_expression,
        $.prefix_expression,
        $.read_expression,
        $.fetch_expression,
        $.infix_expression,
        $.not_in_expression,
        $.is_expression,
        $.write_expression,
        $.call_expression,
        $.index_expression,
        $.slice_expression,
        $.member_expression,
        $.function_expression,
        $.if_expression,
        $.for_expression,
        $.try_expression,
        $.import_expression,
        $.tag_expression,
        $.parenthesized_expression,
        $.block,
        $.schema_declaration,
        $.table_expression,
        $.query_expression,
        $.mutation_expression,
      ),

    infix_expression: ($) =>
      choice(
        // PRODUCT: * / % — parser.go precedences map
        ...[
          ["*", PREC.PRODUCT],
          ["/", PREC.PRODUCT],
          ["%", PREC.PRODUCT],
        ].map(([op, prec_val]) =>
          prec.left(
            prec_val,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // CONCAT: ++
        prec.left(
          PREC.CONCAT,
          seq(
            field("left", $._expression),
            field("operator", "++"),
            field("right", $._expression),
          ),
        ),
        // SUM: + - ..
        ...["+", "-", ".."].map((op) =>
          prec.left(
            PREC.SUM,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // COMPARE: < > <= >=
        ...["<", ">", "<=", ">="].map((op) =>
          prec.left(
            PREC.COMPARE,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // EQUALS: == != ~ !~ in
        ...["==", "!=", "~", "!~", "in"].map((op) =>
          prec.left(
            PREC.EQUALS,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // AND: and && &
        ...["and", "&&", "&"].map((op) =>
          prec.left(
            PREC.AND,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // OR: or || | ??
        ...["or", "||", "|", "??"].map((op) =>
          prec.left(
            PREC.OR,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // Database operators at EQUALS: <=?=> <=??=> <=!=>
        ...["<=?=>", "<=??=>", "<=!=>"].map((op) =>
          prec.left(
            PREC.EQUALS,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
        // Process execution at EQUALS: <=#=>
        prec.left(
          PREC.EQUALS,
          seq(
            field("left", $._expression),
            field("operator", "<=#=>"),
            field("right", $._expression),
          ),
        ),
      ),

    // File I/O write operators at COMMA precedence — parser.go parseExpression special handling
    // ==> ==>> =/=> =/=>>
    call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(field("function", $._expression), field("arguments", $.arguments)),
      ),

    arguments: ($) => seq("(", commaSep($._expression), ")"),

    // parser.go L2579-2613 (parseIndexOrSliceExpression)
    member_expression: ($) =>
      prec(
        PREC.INDEX,
        seq(
          field("object", $._expression),
          ".",
          field("property", choice($.identifier, alias("as", $.identifier))),
        ),
      ),

    // ================================================================
    // Functions and blocks — parser.go L2286-2385
    // ================================================================

    // parser.go L2286-2301 (parseBlockStatement)
    block: ($) => seq("{", repeat($._statement), "}"),

    // parser.go L2303-2327 (parseFunctionLiteral)
    // Body is ALWAYS a block — no expression bodies
    function_expression: ($) =>
      seq(
        choice("fn", "function"),
        optional(field("parameters", $.parameter_list)),
        field("body", $.block),
      ),

    // parser.go L2330-2360 (parseFunctionParametersNew)
    parameter_list: ($) =>
      seq(
        "(",
        commaSep(
          choice(
            $.identifier,
            $._default_param,
            $._rest_param,
            $.array_pattern,
            $.dictionary_pattern,
          ),
        ),
        ")",
      ),

    // parser.go L2363-2385 (parseFunctionParameter — default value)
    _default_param: ($) =>
      seq(field("name", $.identifier), "=", field("default", $._expression)),

    // parser.go L2363-2385 (parseFunctionParameter — rest)
    _rest_param: ($) => seq("...", field("name", $.identifier)),

    // ================================================================
    // Control flow — parser.go L2171-2496
    // ================================================================

    // parser.go L2171-2284 (parseIfExpression)
    // Two forms:
    //   With parens: if (cond) consequence [else alternative]
    //     consequence can be block or single expression/statement
    //   Without parens: if cond { body } [else ...]
    //     consequence must be a block
    if_expression: ($) =>
      prec.dynamic(
        10,
        prec.right(
          PREC.LOWEST,
          seq(
            "if",
            choice(
              prec.dynamic(
                20,
                seq(
                  "(",
                  field("condition", $._expression),
                  ")",
                  field(
                    "consequence",
                    choice(prec.dynamic(10, $.block), $._statement),
                  ),
                ),
              ),
              seq(
                field("condition", $._expression),
                field("consequence", $.block),
              ),
            ),
            optional(
              seq(
                "else",
                field(
                  "alternative",
                  choice(
                    prec.dynamic(10, $.block),
                    prec.dynamic(5, $.if_expression),
                    $._statement,
                  ),
                ),
              ),
            ),
          ),
        ),
      ),

    // parser.go L2390-2496 (parseForExpression)
    // Iteration form: for [var|key,value] in iterable { body }
    // Mapping form:   for (iterable) function
    for_expression: ($) =>
      prec.right(
        PREC.LOWEST,
        seq(
          "for",
          choice(
            // Iteration with parens: for (x in arr) { body } or for (k, v in dict) { body }
            // prec.dynamic(10) to prefer iteration over mapping when ambiguous
            prec.dynamic(
              10,
              seq(
                "(",
                optional(seq(field("key", $.identifier), ",")),
                field("variable", $._pattern),
                "in",
                field("iterable", $._expression),
                ")",
                field("body", $.block),
              ),
            ),
            // Iteration without parens: for x in arr { body }
            prec.dynamic(
              10,
              seq(
                optional(seq(field("key", $.identifier), ",")),
                field("variable", $._pattern),
                "in",
                field("iterable", $._expression),
                field("body", $.block),
              ),
            ),
            // Mapping form: for (iterable) function — REQUIRES parens
            seq(
              "(",
              field("iterable", $._expression),
              ")",
              field("mapper", $._expression),
            ),
          ),
        ),
      ),

    // parser.go L1838-1863 (parseTryExpression)
    // try must be followed by a call expression
    try_expression: ($) =>
      prec.right(PREC.PREFIX, seq("try", field("call", $._expression))),

    // parser.go L1871-1931 (parseImportExpression)
    import_expression: ($) =>
      prec.right(
        seq(
          "import",
          field("source", $._expression),
          optional(seq("as", field("alias", $.identifier))),
        ),
      ),

    // ================================================================
    // Tags — parser.go L1354-1528
    // ================================================================

    // parser.go L1354-1365 (parseTagLiteral), L1367-1528 (parseTagPair, parseTagContents)
    // Tag content is repeat(_statement) — full Parsley code, NOT text with interpolation
    // Exception: <style> and <script> tags use raw text mode with @{} interpolation
    tag_expression: ($) =>
      prec(
        PREC.TAG,
        choice(
          $.self_closing_tag,
          $.style_tag,
          $.script_tag,
          $.sql_tag,
          seq($.open_tag, repeat($._tag_child), $.close_tag),
          // Grouping tags: <>...</>
          seq("<>", repeat($._tag_child), "</>"),
        ),
      ),

    // Style tag with raw text content and @{} interpolation
    // Uses token with higher precedence to ensure <style wins over generic tag_start
    open_tag: ($) =>
      seq(
        $.tag_start,
        repeat(choice($.tag_attribute, $.tag_spread_attribute)),
        ">",
      ),

    close_tag: ($) => seq("</", field("name", $.tag_name), ">"),

    // Tag start: < immediately followed by tag name (no whitespace)
    // This token disambiguates from the less-than operator
    // The token captures <tagname as a single unit so tree-sitter can
    // distinguish it from < followed by an identifier in expression context
    tag_name: ($) => /[a-zA-Z][a-zA-Z0-9.-]*/,

    // Tag children are Parsley code — parser.go L1421-1528 (parseTagContents)
    // tag_expression is reachable via _expression → expression_statement
    _tag_child: ($) => $._statement,

    // parser.go parseTagAttributes (L1645-1814)
    _pattern: ($) =>
      choice(
        $.identifier,
        $.array_pattern,
        $.dictionary_pattern,
        alias("_", $.identifier),
      ),

    // parser.go L3193-3250 (parseArrayDestructuringPattern)
    array_pattern: ($) =>
      seq(
        "[",
        commaSep(choice($._pattern, seq("...", optional($.identifier)))),
        "]",
      ),

    // parser.go L3100-3190 (parseDictDestructuringPattern)
    dictionary_pattern: ($) =>
      seq(
        "{",
        commaSep(
          choice(
            // key: nested_pattern
            seq(field("key", $.identifier), ":", field("value", $._pattern)),
            // key as alias
            seq(field("key", $.identifier), "as", field("alias", $.identifier)),
            // simple key (shorthand)
            $.identifier,
            // rest: ...identifier
            seq("...", optional($.identifier)),
          ),
        ),
        "}",
      ),

    // ================================================================
    // Schema declarations — parser.go L3253-3410 (Phase 2 basic support)
    // ================================================================

    // parser.go L3253-3293 (parseSchemaDeclaration)
    number: ($) => /\d+(\.\d+)?/,

    // -------------------- Booleans --------------------
    // parser.go L1834-1836 — true/false are keywords
    // NOTE: null is NOT a keyword — it's an identifier that the evaluator special-cases
    string: ($) =>
      seq('"', repeat(choice($.escape_sequence, $._string_content)), '"'),

    // Higher precedence than TAG (12) to prevent <tag> inside strings from being tokenized as tag_start
    // Includes { since double-quoted strings don't have interpolation
    _string_content: ($) => token.immediate(prec(PREC.TAG + 2, /[^"\\]+/)),

    // lexer.go L1642-1664 (readTemplate) — backtick strings with {expr} interpolation
    stdlib_import: ($) =>
      token(
        prec(
          3,
          seq(
            "@",
            choice("std", "basil"),
            optional(seq("/", /[a-zA-Z][a-zA-Z0-9_]*/)),
          ),
        ),
      ),

    // @-, @stdin, @stdout, @stderr
    // lexer.go readPathLiteral — stdio detection
    path_literal: ($) =>
      token(
        prec(
          1,
          seq(
            "@",
            choice(
              seq(".", /[./]?/, /[^\s<>"{}|\\^`\[\]),:;]*/),
              seq("/", /[^\s<>"{}|\\^`\[\]),:;]*/),
              seq("~/", /[^\s<>"{}|\\^`\[\]),:;]*/),
            ),
          ),
        ),
      ),

    // @https://example.com, @http://..., @ftp://...
    // lexer.go L2841-2874 (readUrlLiteral)
    array_literal: ($) => seq("[", commaSep($._expression), "]"),

    // parser.go L2988-3079 (parseDictionaryLiteral)
    // No spread, no shorthand properties — always key: value or [key]: value
    dictionary_literal: ($) =>
      prec.dynamic(
        -1,
        seq("{", commaSep(choice($.pair, $.computed_property)), "}"),
      ),

    pair: ($) =>
      seq(
        field("key", choice($.identifier, $.string)),
        ":",
        field("value", $._expression),
      ),

    // parser.go L2988-3079 — computed key: [expr]: value
    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // lexer.go collectTrivia, skipAndCaptureComment
